--- a/_static/src/index.html
+++ b/_static/src/index.html
@@ -106,8 +106,7 @@
             </div><!-- /.l-inner -->
         </section><!-- /.l-main_about -->
 
-        <div class="l-main_parallax l-main_parallax_salad">
-        </div>
+        <img class="parallax" src="img/parallax01.png" alt="image">
 
         <section class="l-main_menu" id="menu">
             <div class="l-main_menu_inner">
@@ -214,7 +213,8 @@
                 </ul><!-- /.l-main_menu_list -->
             </div><!-- /.l-inner -->
         </section><!-- /.l-main_menu -->
-        <div class="l-main_parallax l-main_parallax_cafe"></div>
+        
+        <img class="parallax" src="img/parallax02.png" alt="image">
 
         <section class="l-main_shop" id="shop">
             <div class="l-inner">
@@ -475,7 +475,8 @@
     </footer><!-- /.footer -->
 
     <!-- jquery読み込み -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
