--- a/_static/src/index.html
+++ b/_static/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" prefix="og: サイトURL#">
+<html lang="ja" prefix="og: https://garden-salad.chiemi-b.com/">
 
 <head>
     <meta charset="UTF-8" />
